# wwpppp

./: LICENSE  README.md  pyproject.toml
src/wwpppp/: __init__.py  geometry.py  ingest.py  main.py  palette.py  palette.txt  projects.py  settings.py
